# couchbase-lite-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  download.sh  k8s.yml  libcblite  rust.sublime-project  rust.sublime-workspace  san.supp  skaffold.yaml
.github/workflows/: clippy.yml  rust.yml
libcblite-3.0.1/: cbl.rs
libcblite-3.0.1/include/cbl/: CBL_Edition.h
libcblite-3.0.1/lib/: libcblite.3.dylib  libcblite.dylib  libcblite.so.3
libcblite-3.0.1/lib/cmake/CouchbaseLite/: CouchbaseLiteConfigVersion.cmake  CouchbaseLiteTargets-minsizerel.cmake  CouchbaseLiteTargets.cmake
libcblite-3.0.2/include/cbl/: CBL_Edition.h
libcblite-3.0.2/lib/aarch64-linux-android/cmake/CouchbaseLite/: CouchbaseLiteConfigVersion.cmake  CouchbaseLiteTargets-noconfig.cmake
libcblite-3.0.2/lib/armv7-linux-androideabi/cmake/CouchbaseLite/: CouchbaseLiteConfigVersion.cmake  CouchbaseLiteTargets-noconfig.cmake  (+1 more)
libcblite-3.0.2/lib/x86_64-unknown-linux-gnu/: libicutu.so.66
libcblite-3.0.3/include/cbl/: CBL_Edition.h
libcblite-3.0.3/lib/aarch64-apple-ios/CouchbaseLite.xcframework/: Info.plist
libcblite-3.0.3/lib/ios/CouchbaseLite.xcframework/: Info.plist
libcblite-3.0.3/lib/x86_64-unknown-linux-gnu/: libcblite.so.3  libicuio.so.66
src/: blob.rs  c_api.rs  database.rs  document.rs  encryptable.rs  error.rs  fleece.rs  fleece_mutable.rs  index.rs  lib.rs  logging.rs  main.rs  query.rs  replicator.rs  slice.rs  wrapper.h
tests/: database_tests.rs  document_tests.rs  fleece_tests.rs  query_tests.rs  replicator_tests.rs  simple_tests.rs  slice_tests.rs  utils.rs
(+28 files in other folders)
